view scrollbar in init fixed #134

--- a/src/index.less
+++ b/src/index.less
@@ -266,20 +266,20 @@ body {
   bottom: 0;
   right: 0;
   background-color: #f4f5f8;
-  opacity: 0;
+  opacity: 0.9;
   z-index: 12;
   &.horizontal {
-    // right: 15px;
+    right: 15px;
     overflow-x: scroll;
     overflow-y: hidden;
   }
   &.vertical {
-    // bottom: 15px;
+    bottom: 15px;
     overflow-x: hidden;
     overflow-y: scroll;
   }
   &:hover {
-    opacity: .85;
+    // opacity: .85;
   }
 }
 
